# resume-optimization-crew

./: .env.example  README.md  pyproject.toml
docs/: README.md
output/: company_research.json  final_report.md  job_analysis.json  optimized_resume.md  resume_optimization.json
src/resume_crew/: crew.py  main.py
src/resume_crew/config/: agents.yaml  tasks.yaml
